svn merge -c 1164771 from trunk for MAPREDUCE-2887.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1228671 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -1,8 +1,12 @@
 Hadoop MapReduce Change Log
 
-Release 0.23.1 - Unreleased
+Release 0.23-PB - Unreleased
 
-  INCOMPATIBLE CHANGES
+  IMPROVEMENTS
+
+    MAPREDUCE-2887 due to HADOOP-7524 Change RPC to allow multiple protocols including multuple versions of the same protocol (sanjay Radia)
+
+Release 0.23.1 - Unreleased
 
   NEW FEATURES                                                                    
 
