svn merge -c 1173488 from trunk for HDFS-2351.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1228679 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -9,6 +9,8 @@ Release 0.23-PB - Unreleased
 
     HDFS-2223. Untangle depencencies between NN components (todd)
 
+    HDFS-2351 Change Namenode and Datanode to register each of their protocols seperately (Sanjay Radia)
+
 Release 0.23.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
