--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -8,6 +8,8 @@ Release 0.23-PB - Unreleased
 
     HADOOP-7607. Simplify the RPC proxy cleanup process. (atm)
 
+    HADOOP-7687 Make getProtocolSignature public  (sanjay)
+
 Release 0.23.1 - Unreleased
 
   INCOMPATIBLE CHANGES
