--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -13,6 +13,9 @@ Release 0.23-PB - Unreleased
     HADOOP-7693. Enhance AvroRpcEngine to support the new #addProtocol
     interface introduced in HADOOP-7524.  (cutting)
 
+    HADOOP-7716 RPC protocol registration on SS does not log the protocol name
+    (only the class which may be different) (sanjay)
+
 Release 0.23.1 - Unreleased
 
   INCOMPATIBLE CHANGES
