--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -15,6 +15,8 @@ Release 0.23-PB - Unreleased
  
     HDFS-2181. Separate HDFS Client wire protocol data types (sanjay)
 
+    HDFS-2459. Separate datatypes for Journal Protocol. (suresh)
+
 Release 0.23.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
