svn merge -c 1187505 from trunk for HDFS-2480.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1229487 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -17,6 +17,8 @@ Release 0.23-PB - Unreleased
 
     HDFS-2459. Separate datatypes for Journal Protocol. (suresh)
 
+    HDFS-2480. Separate datatypes for NamenodeProtocol. (suresh)
+
 Release 0.23.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
