--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -2,7 +2,7 @@ Hadoop HDFS Change Log
 
 Release 0.23-PB - Unreleased
 
-  OPTIMIZATIONS
+  IMPROVEMENTS
 
     HDFS-2018. Move all journal stream management code into one place.
                (Ivan Kelly via jitendra)
@@ -22,6 +22,10 @@ Release 0.23-PB - Unreleased
     HDFS-2489. Move Finalize and Register to separate file out of
     DatanodeCommand.java. (suresh)
 
+    HDFS-2488. Separate datatypes for InterDatanodeProtocol. (suresh)
+
+  BUG FIXES
+ 
     HDFS-2481 Unknown protocol: org.apache.hadoop.hdfs.protocol.ClientProtocol (sanjay)
 
     HDFS-2497 Fix TestBackupNode failure. (suresh)
