svn merge -c 1161992 from trunk for HDFS-395.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1229881 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -2,6 +2,11 @@ Hadoop HDFS Change Log
 
 Release 0.23-PB - Unreleased
 
+  NEW FEATURES
+
+    HDFS-395.  DFS Scalability: Incremental block reports. (Tomasz Nykiel
+               via hairong)
+
   IMPROVEMENTS
 
     HDFS-2018. Move all journal stream management code into one place.
