--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -31,6 +31,8 @@ Release 0.23-PB - Unreleased
 
     HDFS-2496. Separate datatypes for DatanodeProtocol. (suresh)
 
+    HDFS-2479 HDFS Client Data Types in Protocol Buffers (sanjay)
+
   BUG FIXES
  
     HDFS-2481 Unknown protocol: org.apache.hadoop.hdfs.protocol.ClientProtocol (sanjay)
