--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -2,6 +2,11 @@ Hadoop Change Log
 
 Release 0.23-PB - Unreleased
 
+  NEW FEATURES                                                                    
+
+    HADOOP-7773. Add support for protocol buffer based RPC engine.
+    (suresh)
+
   IMPROVEMENTS
 
     HADOOP-7524 Change RPC to allow multiple protocols including multuple versions of the same protocol (sanjay Radia)
