svn merge -c 1196171 from trunk for HDFS-2526.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1229907 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -42,6 +42,9 @@ Release 0.23-PB - Unreleased
     HDFS-2499. RPC client is created incorrectly introduced in HDFS-2459.
     (suresh)
 
+    HDFS-2526. (Client)NamenodeProtocolTranslatorR23 do not need to keep a
+               reference to rpcProxyWithoutRetry (atm)
+
 Release 0.23.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
