--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -21,6 +21,8 @@ Release 0.23-PB - Unreleased
     HADOOP-7716 RPC protocol registration on SS does not log the protocol name
     (only the class which may be different) (sanjay)
 
+    HADOOP-7776 Make the Ipc-Header in a RPC-Payload an explicit header (sanjay)
+
 Release 0.23.1 - Unreleased
 
   INCOMPATIBLE CHANGES
