svn merge -c 1204707 from trunk for HDFS-2518.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1229913 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -9,6 +9,8 @@ Release 0.23-PB - Unreleased
 
     HDFS-2517. Add protobuf service for JounralProtocol. (suresh)
 
+    HDFS-2518. Add protobuf service for NamenodeProtocol. (suresh)
+
   IMPROVEMENTS
 
     HDFS-2018. Move all journal stream management code into one place.
