MAPREDUCE-3648. TestJobConf failing. (Thomas Graves via mahadev) - Merging r1230202 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1230203 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -406,6 +406,7 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3380. Token infrastructure for running clients which are not kerberos 
     authenticated. (mahadev)
 
+    MAPREDUCE-3648. TestJobConf failing. (Thomas Graves via mahadev)
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
