svn merge -c 1210319 from trunk for HADOOP-7875.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1230381 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -7,6 +7,9 @@ Release 0.23-PB - Unreleased
     HADOOP-7773. Add support for protocol buffer based RPC engine.
     (suresh)
 
+    HADOOP-7875. Add helper class to unwrap protobuf ServiceException.
+    (suresh)
+
   IMPROVEMENTS
 
     HADOOP-7524 Change RPC to allow multiple protocols including multuple versions of the same protocol (sanjay Radia)
