svn merge -c 1210320 from trunk for HADOOP-7876.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1230385 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -29,6 +29,9 @@ Release 0.23-PB - Unreleased
     HADOOP-7862  Move the support for multiple protocols to lower layer so
     that Writable, PB and Avro can all use it (Sanjay)
 
+    HADOOP-7876. Provided access to encoded key in DelegationKey for
+    use in protobuf based RPCs. (suresh)
+
   BUG FIXES
 
     HADOOP-7833. Fix findbugs warnings in protobuf generated code.
