svn merge -c 1211206 from trunk for HDFS-2629.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1230394 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -19,6 +19,8 @@ Release 0.23-PB - Unreleased
 
     HDFS-2618. Implement protobuf service for NamenodeProtocol. (suresh)
 
+    HDFS-2629. Implement protobuf service for InterDatanodeProtocol. (suresh)
+
   IMPROVEMENTS
 
     HDFS-2018. Move all journal stream management code into one place.
