--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -21,6 +21,8 @@ Release 0.23-PB - Unreleased
 
     HDFS-2629. Implement protobuf service for InterDatanodeProtocol. (suresh)
 
+    HDFS-2636. Implement protobuf service for ClientDatanodeProtocol. (suresh)
+
   IMPROVEMENTS
 
     HDFS-2018. Move all journal stream management code into one place.
