svn merge -c 1212615 from trunk for HADOOP-7899.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1230420 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -32,6 +32,8 @@ Release 0.23-PB - Unreleased
     HADOOP-7876. Provided access to encoded key in DelegationKey for
     use in protobuf based RPCs. (suresh)
 
+    HADOOP-7899. Generate proto java files as part of the build. (tucu)
+
   BUG FIXES
 
     HADOOP-7833. Fix findbugs warnings in protobuf generated code.
