svn merge -c 1179512 from trunk for HADOOP-7695.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1230422 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -36,6 +36,9 @@ Release 0.23-PB - Unreleased
 
   BUG FIXES
 
+    HADOOP-7695. RPC.stopProxy can throw unintended exception while logging
+                 error (atm)
+
     HADOOP-7833. Fix findbugs warnings in protobuf generated code.
     (John Lee via suresh)
 
