svn merge -c 1213619 from trunk for HADOOP-7913.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1230859 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -45,6 +45,8 @@ Release 0.23-PB - Unreleased
     HADOOP-7897. ProtobufRpcEngine client side exception mechanism is not
     consistent with WritableRpcEngine. (suresh)
 
+    HADOOP-7913 Fix bug in ProtoBufRpcEngine  (sanjay)
+
 Release 0.23.1 - Unreleased
 
   INCOMPATIBLE CHANGES
