svn merge -c 1213954 from trunk for HADOOP-7892.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1230860 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -47,6 +47,8 @@ Release 0.23-PB - Unreleased
 
     HADOOP-7913 Fix bug in ProtoBufRpcEngine  (sanjay)
 
+    HADOOP-7892. IPC logs too verbose after "RpcKind" introduction (todd)
+
 Release 0.23.1 - Unreleased
 
   INCOMPATIBLE CHANGES
