svn merge -c 1213985 from trunk for HDFS-2663.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1230872 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -30,6 +30,9 @@ Release 0.23-PB - Unreleased
 
     HDFS-2666. Fix TestBackupNode failure. (suresh)
 
+    HDFS-2663. Optional protobuf parameters are not handled correctly.
+    (suresh)
+
   IMPROVEMENTS
 
     HDFS-2018. Move all journal stream management code into one place.
