svn merge -c 1215358 from trunk for HADOOP-7931.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1230898 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -50,6 +50,9 @@ Release 0.23-PB - Unreleased
 
     HADOOP-7892. IPC logs too verbose after "RpcKind" introduction (todd)
 
+    HADOOP-7931. o.a.h.ipc.WritableRpcEngine should have a way to force
+                 initialization (atm)
+
 Release 0.23.1 - Unreleased
 
   INCOMPATIBLE CHANGES
