MAPREDUCE-3532. Modified NM to report correct http address when an ephemeral web port is configured. Contributed by Bhallamudi Venkata Siva Kamesh. svn merge --ignore-ancestry -c 1231342 ../../trunk/
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1231344 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -430,6 +430,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3656. Fixed a race condition in MR AM which is failing the sort
     benchmark consistently. (Siddarth Seth via vinodkv)
 
+    MAPREDUCE-3532. Modified NM to report correct http address when an ephemeral
+    web port is configured. (Bhallamudi Venkata Siva Kamesh via vinodkv)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
