--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -433,6 +433,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3532. Modified NM to report correct http address when an ephemeral
     web port is configured. (Bhallamudi Venkata Siva Kamesh via vinodkv)
 
+    MAPREDUCE-3404. Corrected MR AM to honor speculative configuration and enable
+    speculating either maps or reduces. (Eric Payne via vinodkv)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
